# SAMPython

./: README.md  README.pt-br.md  pyproject.toml
sam/: sd.py  testbench.py
sam/hdl_files/: pck_myhdl_011.vhd  sd.vhd  testbench.vhd
tests/: johnson_counter.py  testbench.py
